# mcp_rs

./: Cargo.toml  README.md
controller/: Cargo.toml
controller/src/: lib.rs  lifecycle.rs  ping.rs  resource.rs  tool.rs
domain/: Cargo.toml
domain/src/entity/: annotation.rs  client.rs  mod.rs  resource.rs  server.rs  tool.rs
domain/src/repository/: mod.rs  resource.rs  tool.rs
jsonrpc/: Cargo.toml
jsonrpc/src/: error.rs  id.rs  lib.rs  version.rs
protocol/: Cargo.toml
protocol/src/: interactor.rs  lib.rs  server.rs  version.rs
protocol/src/usecase/: lifecycle.rs  mod.rs  ping.rs  resource.rs  tool.rs
resources/: Cargo.toml
resources/src/: lib.rs  pi.rs
src/: di.rs  logger.rs  main.rs
tools/: Cargo.toml
tools/src/: lib.rs  str_rev.rs
transport/: Cargo.toml
transport/src/: lib.rs  stdio.rs
