[package]
name = "mcp_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
controller = { path = "./controller" }
protocol = { path = "./protocol" }
resources = { path = "./resources" }
tools = { path = "./tools" }
transport = { path = "./transport" }
tokio.workspace = true
tracing-subscriber.workspace = true

[workspace]
members = ["controller", "domain", "jsonrpc", "protocol", "resources", "tools", "transport"]

[workspace.dependencies]
async-trait = "0.1.88"
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
tokio = { version = "1.45.0", features = ["fs", "io-std", "io-util", "macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
